--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>DVD Player</title>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Space....</h1>
+			<h1>DVD Player</h1>
 		</header>
 			<section id="content">
 				<canvas id="Starfield" data-processing-sources="Space/Space.pde Space/Normal.pde Space/Oddball.pde Space/Jumbo.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Update your foot with a description of the project. What Java features did you use. 
+		    Not sure yet 
 	    </footer>
 	</body>
 </html>
