--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Space Constellations</h1>
 		</header>
 			<section id="content">
-				<canvas id="Starfield" data-processing-sources="Space/Space.pde Space/Normal.pde Space/Oddball.pde Space/Jumbo.pde">
+				<canvas id="Starfield" data-processing-sources="Space/Space.pde Space/Normal.pde Space/Oddball.pde Space/Jumbo.pde Space/Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
